[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Projectile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41, 40 )

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )
DESPAWN_TIME = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="HitBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.921569, 0.235294, 0.235294, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.361
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]

[editable path="HitBox"]
